testing commit fix

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             </ul>  
           </div>
         </div>
-        <h1>Home Page</h1> 
+        <h1 style='text-align:center'>Home Page</h1> 
         <div class="span9" style='background-image:url(1.JPG); background-repeat:no-repeat; background-size:max-width=100%; background-size:max-height=100%;'>  
           <div class="leaderboard">  
             <p style='text-align:center'>Some text</p>  
